# Jello

./: CMakeLists.txt  README.md
include/: jello.h
include/asset/: Asset.h  AssetBase.h  AssetLoader.h  SceneAsset.h  ShaderAsset.h  SinglePathAsset.h  TextureAsset.h
include/input/: InputListener.h
include/logging/: LogLevel.h  Logger.h  NullStream.h  StandardOutputLogger.h
include/mesh/: ElasticMesh.h  Mesh.h  MeshRenderer.h  MeshTexture.h  Vertex.h
include/render/: Camera.h  Model.h  Renderable.h  Scene.h  ShaderCompilationError.h  ShaderProgram.h  Texture.h  VertexArrayObject.h
include/vertex/: Particle.h  Vertex.h
lib/glad/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
lib/stb_image/: stb_image.cpp
res/: default.fs.glsl  default.vs.glsl
res/shader/: default.fs.glsl  default.vs.glsl
src/: main.cpp
src/asset/: AssetLoader.cpp  SceneAsset.cpp  ShaderAsset.cpp  TextureAsset.cpp
src/input/: InputListener.cpp
src/logging/: Logger.cpp  NullStream.cpp  StandardOutputLogger.cpp
src/mesh/: ElasticMesh.cpp  Mesh.cpp  MeshRenderer.cpp
src/render/: Camera.cpp  Model.cpp  Scene.cpp  ShaderCompilationError.cpp  ShaderProgram.cpp  Texture.cpp  VertexArrayObject.cpp
src/vertex/: Particle.cpp
tests/: dummy_test.cpp
